# CircleOS

./: .gitattributes  .gitignore  BUILD_ISO_INSTRUCTIONS.md  CMakeLists.txt  CMakeLists.txt.minimal  CONTRIBUTING.md  DONATIONS.md  ENVIRONMENT.md  FINAL_SUMMARY.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  build.sh  fix-qml-paths.sh  test_qt6.cpp
apps/: CMakeLists.txt
apps/browser/: CMakeLists.txt  main.cpp
apps/browser/qml/: main.qml
apps/calculator/: CMakeLists.txt  main.cpp
apps/calculator/qml/: main.qml
apps/calendar/: CMakeLists.txt  main.cpp
apps/calendar/qml/: main.qml
apps/clock/: main.cpp
apps/contacts/: main.cpp
apps/files/: CMakeLists.txt  main.cpp
apps/files/qml/: main.qml
apps/mail/: CMakeLists.txt  main.cpp
apps/mail/qml/: main.qml
apps/maps/: main.cpp
apps/music/: CMakeLists.txt  main.cpp
apps/music/qml/: main.qml
apps/notes/: main.cpp
apps/photos/: CMakeLists.txt  main.cpp
apps/photos/qml/: main.qml
apps/settings/: CMakeLists.txt  main.cpp
apps/settings/qml/: main.qml
apps/store/: CMakeLists.txt  main.cpp
apps/store/qml/: main.qml
apps/systemmonitor/: main.cpp
apps/terminal/: CMakeLists.txt  main.cpp
apps/terminal/qml/: main.qml
apps/texteditor/: CMakeLists.txt  main.cpp
apps/texteditor/qml/: main.qml
apps/videos/: CMakeLists.txt  main.cpp
apps/videos/qml/: main.qml
apps/weather/: CMakeLists.txt  main.cpp
apps/weather/qml/: main.qml
bootloader/: CMakeLists.txt
bootloader/grub/: theme.txt
core/: CMakeLists.txt
core/audio/: AudioManager.cpp  AudioManager.h  CMakeLists.txt
core/bluetooth/: BluetoothManager.cpp  BluetoothManager.h  CMakeLists.txt
core/clipboard/: ClipboardManager.h
core/display/: CMakeLists.txt  DisplayManager.cpp  DisplayManager.h
core/include/: Application.h  ConfigManager.h  DBusService.h  SystemInfo.h
core/input/: CMakeLists.txt  InputManager.cpp  InputManager.h
core/network/: CMakeLists.txt  NetworkManager.cpp  NetworkManager.h
core/notifications/: CMakeLists.txt  NotificationManager.cpp  NotificationManager.h
core/power/: CMakeLists.txt  PowerManager.cpp  PowerManager.h
core/session/: CMakeLists.txt  SessionManager.cpp  SessionManager.h
core/settings/: CMakeLists.txt  SettingsBackend.cpp  SettingsBackend.h
core/src/: Application.cpp  ConfigManager.cpp  DBusService.cpp  SystemInfo.cpp
core/theme/: ThemeManager.h
core/wallpaper/: WallpaperManager.h
desktop/: CMakeLists.txt
desktop/compositor/: CMakeLists.txt  main.cpp
desktop/compositor/qml/: main.qml
desktop/dock/: CMakeLists.txt
desktop/lockscreen/: CMakeLists.txt  main.cpp
desktop/lockscreen/qml/: LockScreen.qml
desktop/panel/: CMakeLists.txt
desktop/shell/: CMakeLists.txt  main.cpp
desktop/shell/qml/: main.qml
desktop/shell/qml/components/: AppIcon.qml  AppLauncher.qml  CircularButton.qml  ContextMenu.qml  DesktopIcon.qml  Dock.qml  DockIcon.qml  NotificationCenter.qml  NotificationItem.qml  PowerMenu.qml  QuickSettings.qml  SystemTray.qml  TopPanel.qml  WindowSwitcher.qml  Workspace.qml  WorkspaceSwitcher.qml
desktop/shell/resources/: qml.qrc
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  KEYBOARD_SHORTCUTS.md  THEMING.md  UI_DESIGN.md
installer/: CMakeLists.txt
installer/calamares/: settings.conf
installer/calamares/branding/circleos/: branding.desc
iso-build/auto/: build  clean  config
iso-build/circleos-live/: wget-log  wget-log.1  wget-log.2  wget-log.3  wget-log.4
iso-build/circleos-live/auto/: clean  config
iso-build/circleos-live/config/hooks/normal/: 9000-install-circleos.hook.chroot
iso-build/circleos-live/config/package-lists/: circleos.list.chroot
iso-build/config/: binary  common
iso-build/config/hooks/normal/: 0100-circleos-install.hook.chroot
iso-build/config/includes.chroot/etc/skel/.config/autostart/: circleos-shell.desktop
iso-build/config/package-lists/: circleos.list.chroot
resources/: circleos.desktop
resources/applications/: circleos-files.desktop  circleos-settings.desktop  circleos-terminal.desktop
scripts/: build-iso.sh  create-user.sh  package-deb.sh  run-qemu.sh  setup-dev.sh  version-check.cpp
systemd/: circleos-compositor.service  circleos-shell.service
tests/: CMakeLists.txt  test_core.cpp
themes/CircleOS/: theme.conf
