add_subdirectory(files)
add_subdirectory(settings)
add_subdirectory(terminal)
add_subdirectory(calculator)
add_subdirectory(texteditor)
add_subdirectory(music)
add_subdirectory(calendar)
add_subdirectory(weather)
add_subdirectory(photos)
add_subdirectory(store)
add_subdirectory(mail)
add_subdirectory(browser)
add_subdirectory(videos)
